--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,7 @@
 <!-- Favicon. -->
 <!-- Font Awesome. -->
 <!-- Google Fonts. -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 <!-- Normalize. -->
 <!-- Styles. -->
 <link rel="stylesheet" type="text/css" href="/css/styles.css" />
