--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,3 +7,12 @@
 body {
     background-color: Silver;
 }
+
+.h1 {
+    font-size: 50px;
+    font-weight: 800;
+    font-family: "Roboto", sans-serif, "Times New Roman", Times, serif;
+    text-align: center;
+    text-decoration: none;
+    color: Black;
+}
