--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,5 +5,7 @@
         <%- include("./partials/head.ejs"); %>
     </head>
 
-    <body></body>
+    <body>
+        <h1 class="h1">HOME.</h1>
+    </body>
 </html>
