--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,5 @@
 <!-- Favicon. -->
+<link rel="shortcut icon" href="#" type="image/x-icon">
 <!-- Font Awesome. -->
 <!-- Google Fonts. -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
